[gd_scene load_steps=5 format=2]

[ext_resource path="res://LobbyState.gd" type="Script" id=1]
[ext_resource path="res://MenuPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://MenuBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://states/LobbyPlayer.tscn" type="PackedScene" id=4]

[node name="LobbyState" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" parent="." instance=ExtResource( 3 )]

[node name="MenuPanel" parent="." instance=ExtResource( 2 )]

[node name="StartButton" type="Button" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 370.0
margin_right = -200.0
margin_bottom = -145.0
rect_scale = Vector2( 2, 2 )
text = "Start"

[node name="BackButton" type="Button" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 460.0
margin_right = -200.0
margin_bottom = -65.0
rect_scale = Vector2( 2, 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyPlayer1" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 150.0
margin_right = -150.0
margin_bottom = -380.0

[node name="LobbyPlayer2" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 180.0
margin_right = -150.0
margin_bottom = -350.0

[node name="LobbyPlayer3" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 210.0
margin_right = -150.0
margin_bottom = -320.0

[node name="LobbyPlayer4" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 240.0
margin_right = -150.0
margin_bottom = -290.0

[node name="LobbyPlayer5" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 270.0
margin_right = -150.0
margin_bottom = -260.0

[node name="LobbyPlayer6" parent="MenuPanel" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 300.0
margin_right = -150.0
margin_bottom = -230.0
